--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@ dist/
 
 # Environment variables
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Logs
 logs
@@ -23,3 +27,8 @@ yarn-error.log*
 # OS files
 .DS_Store
 Thumbs.db
+
+# Debug files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
